--- a/00-G2-CS2B-FAI-April-2021/Question_3_Solutions_1.Rmd
+++ b/00-G2-CS2B-FAI-April-2021/Question_3_Solutions_1.Rmd
@@ -36,8 +36,13 @@ pre {
 
 Q3
 (i)
+
+```{r}
 mortalitydata =
 read.csv(file = "CS2B_Apr_21_Qu_3_Data.csv", head = TRUE)
+```
+
+```{r}
 KMfit = 
 survfit( 
  
@@ -46,8 +51,12 @@ Surv(mortalitydata$Time, mortalitydata$Status) ~ 1,
  
 
 conf.int = 0.995) 
- 
+```
 
+--- 
+
+
+```{r eval = FALSE}
 plot( 
  
 
@@ -62,13 +71,38 @@ ylab = "Survival Function, S(t)",
 
 main = "Kaplan-Meier Estimate, with its two-sided 99.5% 
 confidence interval, for all patients") 
+```
+
+
+--- 
+
+```{r echo = FALSE}
+plot( 
  
 
+KMfit, 
+ 
 
+xlab = "Time", 
+ 
+
+ylab = "Survival Function, S(t)", 
+ 
+
+main = "Kaplan-Meier Estimate, with its two-sided 99.5% 
+confidence interval, for all patients") 
+```
+
+
+--- 
  
 
 (ii)
+
+```{r}
 summary(KMfit, time = 365)$surv
+```
+
 OR:
 KMfit$surv[365]
 OR:
