--- a/00-G1-CS1B-FIA-April-2021/Question_2.Rmd
+++ b/00-G1-CS1B-FIA-April-2021/Question_2.Rmd
@@ -59,7 +59,7 @@ marks_2 = c(0,4,16,25,27,42,23,4,9,0)
 
 Plot two graphs, one for each marker, for the distribution of the exam 
 marks given by the two markers. 
-[Hint: You may find the R command barplot() useful.] 
+[Hint: You may find the R command <tt>barplot()</tt> useful.] 
 (b) Comment on the graphs produced in part (i)(a). 
 
 ---
@@ -87,6 +87,24 @@ of the two markers is zero or not, at the 5% confidence level, taking into
 account that the two markers have marked the same exam paper. 
 
 ---
+(ii)
+𝐻𝐻0 ∶ difference in means is zero 𝑣𝑣𝑣𝑣 𝐻𝐻𝐴𝐴 ∶ difference in means is not zero.
+> t.test(marker_1,marker_2,paired=TRUE) 
+Paired t-test
+data: marker_1 and marker_2
+t = 2.862, df = 9, p-value = 0.01872
+alternative hypothesis: true difference in means is not equal to 0
+95 percent confidence interval:
+0.1886284 1.6113716
+sample estimates:
+mean of the differences 
+0.9
+P-value is equal to 0.01872
+which is less than the significance level (5%)
+Therefore reject the null hypothesis
+There appears to be difference in the mean scores between the two markers
+
+---
 
 ### Exercise 3
 
@@ -95,10 +113,37 @@ marked the same exam paper.
 
 ---
 
+
+(iii)
+𝐻𝐻0 ∶ difference in means is zero 𝑣𝑣𝑣𝑣 𝐻𝐻𝐴𝐴 ∶ difference in means is not zero
+> t.test(marker_1,marker_2) 
+Welch Two Sample t-test
+data: marker_1 and marker_2
+t = 1.1968, df = 17.675, p-value = 0.2472
+alternative hypothesis: true difference in means is not equal to 0
+95 percent confidence interval:
+-0.6820491 2.4820491
+sample estimates:
+mean of x mean of y 
+ 3.9 3.0
+P-value is equal to 0.2472
+which is more than the significance level (5%)
+Therefore do not reject the null hypothesis
+There appears to be no difference between the mean scores of the two markers
+
+---
+
 ### Exercise 4
 
 Comment on your conclusions from Exercises 2 and 3. 
 
+---
+(iv)
+Parts (ii) and (iii) lead to different conclusions
+We would expect the data to not be independent of one another since both markers have 
+marked the same exam papers
+Therefore the paired test in (ii) gives smaller variation for the test statistic and leads to 
+rejecting the hypothesis of equal means, at the 5% level 
 ---
 
 ### Exercise 5
@@ -106,6 +151,7 @@ Comment on your conclusions from Exercises 2 and 3.
 samples, and independent samples as though they were paired. 
 
 ---
+
 
 
 ---
