--- a/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
+++ b/00-J2-CS2B-ASI-September-2021/Question_4.Rmd
@@ -68,6 +68,8 @@ seasonal difference.
 ---
 
 Solution 4:
+
+```{r}
 library(tseries)
 ## Warning: package 'tseries' was built under R version 4.0.5
 ## Registered S3 method overwritten by 'quantmod':
@@ -75,17 +77,22 @@ library(tseries)
 ## as.zoo.data.frame zoo
 library(forecast)
 ## Warning: package 'forecast' was built under R version 4.0.5
+```
 
 ---
 
 # (i)
+
 ```{r}
+
 data(sunspots)
 a<-ts(sunspots,frequency = 12)
 plot(a, main = "Time series of plots")
+
 ```
 ---
-```{r}
+
+```{r eval = FALSE}
 #(ii)
 par(mfrow=c(1,2))
 acf(a,main="Sample ACF")
@@ -93,6 +100,17 @@ pacf(a,main="Sample PACF")
 ```
 
 ---
+
+
+```{r echo = FALSE}
+#(ii)
+par(mfrow=c(1,2))
+acf(a,main="Sample ACF")
+pacf(a,main="Sample PACF")
+```
+
+---
+
 
 # (iii)
 ```{r}
@@ -120,49 +138,38 @@ acf(a,plot = FALSE)
 ## 0.115 0.083
 
 ```
+
 ---
+
 ```{r}
 
 pacf(a,plot = FALSE)
-## 
-## Partial autocorrelations of series 'a', by lag
-## 
-## 0.0833 0.1667 0.2500 0.3333 0.4167 0.5000 0.5833 0.6667 0.7500 0.8333 0.91
-67 
-## 0.922 0.272 0.189 0.135 0.064 0.044 -0.005 0.014 0.046 -0.045 -0.0
-58 
-## 1.0000 1.0833 1.1667 1.2500 1.3333 1.4167 1.5000 1.5833 1.6667 1.7500 1.83
-33 
-## -0.059 -0.077 -0.056 -0.046 -0.099 -0.075 -0.102 -0.037 -0.055 -0.054 -0.0
-13 
-## 1.9167 2.0000 2.0833 2.1667 2.2500 2.3333 2.4167 2.5000 2.5833 2.6667 2.75
-00 
-## 0.014 -0.068 0.045 -0.034 -0.050 -0.029 -0.019 0.012 -0.006 0.026 -0.0
-17 
-## 2.8333 
-## -0.039 
+
 
 ```
 ---
 
+### PArt 4
 
-# (iv)
 'The ACF indicates that there is correlation between an observation and
 the past observations. There is a correlation beyond 2.5 years but it keeps g
 etting weaker'
-## [1] "The ACF indicates that there is correlation between an observation and the past observations. There is a correlation beyond 2.5 years but it keep
-s getting weaker" [2M]
-```
+
+ "The ACF indicates that there is correlation between an observation and the past observations. There is a correlation beyond 2.5 years but it keep
+s getting weaker" 
+
+
 ---
 ```{r}
 # (v)
 s<-diff(a, lag=12,differences=1)
 head(s,12) 
 ```
-## Jan Feb Mar Apr May Jun Jul Aug Sep Oct Nov Dec
-## 2 15.3 13.3 19.2 32.6 5.0 16.5 -9.4 36.7 15.3 -9.8 -95.3 -9.8
 
 ---
+
+
+#### PArt 6
 
 ```{r}
 # (vi)
@@ -173,10 +180,10 @@ plot(f)
 
 ---
 
-# (vii)
+ (vii)
 'The cyclical trend with more variations at the longer time lags, 
 there is seasonality in the dataset'
-## [1] "The cyclical trend with more variations at the longer time lags, \nth
-ere is seasonality in the dataset" [2M]
+ "The cyclical trend with more variations at the longer time lags, \nth
+ere is seasonality in the dataset" 
 ```
 ---
