--- a/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
+++ b/00-K1-CS1B-FIA-APRIL-2022/K1_Question_3.Rmd
@@ -40,14 +40,15 @@ pre {
 
 Consider a sample of 10,000 car insurance policies sold to drivers who have had a 
 driving licence for no more than 5 years. The data are given in the file 
-CarInsurance.Rdata, which contains the following four variables: 
- age: a factor taking the values 0 for young and 1 for old; this refers to the age of 
+<tt>CarInsurance.Rdata</tt>, which contains the following four variables: 
+
+* age: a factor taking the values 0 for young and 1 for old; this refers to the age of 
 the policyholder. 
- LY: the number of years the policyholder has had a driving licence before the start 
+* LY: the number of years the policyholder has had a driving licence before the start 
 of the current year. 
- NCD: the number of years the policyholder has had a no claims discount before the 
+* NCD: the number of years the policyholder has had a no claims discount before the 
 start of the current year. 
- claims: the number of claims the policyholder submitted during the current year. 
+* claims: the number of claims the policyholder submitted during the current year. 
 It has been suggested that drivers belonging to the old age category have more years 
 of no claims discount than younger drivers. 
 
@@ -78,7 +79,7 @@ using age,LY and NCD as explanatory variables.
 ---
 
 (v) Fit a GLM to the claim counts with age, LY and NCD as the main effect 
-explanatory variables. [3] 
+explanatory variables.
 To simplify the integration of the model into business processes, an insurer wishes to 
 use only models with at most two explanatory variables. 
 (vi) Determine which two explanatory variables (out of age, LY and NCD) should 
@@ -86,7 +87,7 @@ be used in a GLM for the claim counts if only two explanatory variables are
 allowed. 
 (vii) Comment on the comparison of the fit of the models in parts (v) and (vi).  
 
-```
+
 
 ---
 
@@ -94,9 +95,8 @@ allowed.
 Q3
 (i)
 Plot histograms for no claims discount years:
+
 ```{r}
-
-
 NCD_old = NCD[age==1] 
 NCD_young = NCD[age==0] 
 hist(NCD_old, prob=TRUE, breaks = c(0,1,2,3,4,5)) 
@@ -123,14 +123,21 @@ so the number of years of NCD seems to be higher for old policyholders.
 ---
 
 
-
-```{r}
 (iii)(a)
 Calculate proportions:
+
+```{r}
 prop_young = sum(NCD_young > 2)/length(NCD_young) 
 prop_young
+```
+
 Proportion is 0.5736150 
+
+---
+
 Alternative R code:
+
+```{r}
 length(NCD_young[NCD_young>2])/length(NCD_young)
 (b)
 prop_old = sum(NCD_old > 2)/length(NCD_old) 
@@ -145,15 +152,21 @@ Alternative R code:
 ```{r}
 
 length(NCD_old[NCD_old>2])/length(NCD_old)
-CS1B – Actuarial Statistics – Core Principles – April 2022 - Examiners’ report
-CS1B A2022 © Institute and Faculty of Actuaries
-(iv)
+```
 
 ---
+
+(iv)
+
+
 Test the hypothesis that prop of NCD >2 is equal for young and old, against alternative that 
 proportions are not equal: 
+
+```{r}
 NCDgreaterTwo = c(sum(NCD_young > 2), sum(NCD_old > 2)) 
 YoungOld = c(length(NCD_young), length(NCD_old)) 
+```
+
 Two-sample test for equality of proportions:
 prop.test(NCDgreaterTwo, YoungOld, correct=F) 
 data: NCDgreaterTwo out of YoungOld
@@ -164,6 +177,8 @@ alternative hypothesis: two.sided
 sample estimates:
  prop 1 prop 2 
 0.5736150 0.9704187
+
+
 The 𝑝𝑝-value is very small, therefore we reject the null hypothesis of equal proportions. 
 
 ---
@@ -206,13 +221,20 @@ AIC: 23104
 
 We need to fit the three possible models with two variables each and compare the AIC 
 values:
+
+```{r}
 glm(claims ~ LY + NCD, family = poisson)$aic
 # 23102.41 
 glm(claims ~ age+LY, family = poisson)$aic
 # 23125.08 
 glm(claims ~ age+NCD, family = poisson)$aic
 # 23131.97 
+```
+
 Model LY + NCD has the smallest AIC value and should be preferred. 
+
+---
+
 (vi)
 The AIC for model LY + NCD (23102) is slightly lower than the AIC for
 age + LY + NCD (23104), but the AIC values are very close. 
